# prometheus-fdw

./: Cargo.toml  README.md  prometheus_fdw.control  prometheusfdw.control
.github/workflows/: release.yml
sql/: bootstrap.sql
src/: error.rs  fdw.rs  lib.rs  utils.rs
src/query/: lexer.rs  mod.rs
